--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@prisma/client": "^5.15.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
     "react": "^18",
@@ -22,6 +25,7 @@
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
