--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@prisma/client": "^5.15.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
