--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
