--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
+    "swiper": "^11.1.4",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
