--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.2.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
     "nookies": "^2.5.2",
     "react": "^18",
