--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@headlessui/react": "^2.1.1",
+    "@heroicons/react": "^2.1.4",
     "@prisma/client": "^5.15.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/bcrypt": "^5.0.2",
@@ -34,6 +37,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
