--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@prisma/client": "^5.15.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/quill": "^2.0.14",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "dompurify": "^3.1.6",
+    "highlight.js": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.6.2",
     "nookies": "^2.5.2",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -38,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
